# dtcch-2025-intellect-store

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
agents/: base_agent.py
agents/code_extractor/: agent.py
agents/code_inspector/: agent.py
agents/regulation_inspector/: agent.py  document_changes_summary.txt  outputter.py
fastapi_backend/: .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
fastapi_backend/alembic_migrations/: env.py
fastapi_backend/alembic_migrations/versions/: 0905607b0603_remove_item_table_and_add_repositories.py  1c46306eaa46_create_repositories_and_sources_tables.py  451f84715a82_update_repositories_fields.py  7ea8bdb9324e_add_description_to_sources.py  d44ac371bfdd_sources.py
fastapi_backend/app/: database.py  main.py  models.py  schemas.py  utils.py
fastapi_backend/app/agents/: base_agent.py
fastapi_backend/app/agents/adaptation_expert/: agent.py
fastapi_backend/app/agents/code_extractor/: agent.py
fastapi_backend/app/agents/code_inspector/: agent.py
fastapi_backend/app/agents/regulation_inspector/: agent.py
fastapi_backend/app/routes/: ask-conformix.py  ask_conformix.py  repositories.py  sources.py
local-shared-data/: openapi.json
nextjs-frontend/: .gitignore  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.js
nextjs-frontend/app/: layout.tsx  page.tsx
nextjs-frontend/app/dashboard/: layout.tsx
nextjs-frontend/lib/: definitions.ts
settlement_optimization/: DataInput.py  DataModels.py  DataVisual.py  Model.py  hello.py  main.py  pyproject.toml
(+22 files in other folders)
